fixing ajax request / routing

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap"
       rel="stylesheet">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Revolut Queue App</title>
+    <title>Revolut Queue App V1</title>
   </head>
   <body>
     <noscript>
